[tool.poetry]
name = "poetry-dummy"
version = "0.1.0"
description = ""
authors = ["Jade Mackay <jademackay@gmail.com>"]
# packages = [{include = "poetry-dummy"}] 

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
